# WD_Client

./: .gitignore  README.rst  pyproject.toml  pytest.ini  setup.py
wd_client/: wd_client.py
wd_client/tests/: test_wd_client.py
